fix grid-gap home

--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -20,7 +20,7 @@
                 "a a p p p"
                 "a a p p p"
                 "a a p p p";
-    /* grid-gap: 0.7rem; */
+    grid-gap: 0.7rem;
 }
 
 .a, .e, .n, .p {
